src/test/ui/mismatched_types/const-fn-in-trait.stderr
error[E0379]: trait fns cannot be declared const
  --> $DIR/const-fn-in-trait.rs:7:5
   |
LL |     const fn g();
   |     ^^^^^ trait fns cannot be const

error[E0379]: trait fns cannot be declared const
  --> $DIR/const-fn-in-trait.rs:11:5
   |
LL |     const fn f() -> u32 { 22 }
   |     ^^^^^ trait fns cannot be const

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0379`.
